--- a/Style.css
+++ b/Style.css
@@ -949,4 +949,11 @@ footer {
   margin: 20px auto 20px; /* دکمه وسط و فاصله یکسان */
   padding: 12px 30px;
 }
-
+.modal-room-img,
+.gallery-item img,
+.feature-box img {
+    width: 100%;
+    height: 200px; /* یا هر ارتفاع دلخواه */
+    object-fit: cover;
+    border-radius: 10px;
+}
